// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typeSearch _include queryParams={"_include":"*"} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest",
      "size": 20,
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "id": Array [
                    "patient-id-333",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "patient",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "id": Array [
                    "practitionerRole-id-555",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "practitionerrole",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "id": Array [
                    "practitioner-id-222",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "practitioner",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "id": Array [
                    "immunizationRec-id-444",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "immunizationrecommendation",
    },
  ],
]
`;

exports[`typeSearch _include queryParams={"_include":"MedicationRequest:subject"} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest",
      "size": 20,
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "id": Array [
                    "patient-id-333",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "patient",
    },
  ],
]
`;

exports[`typeSearch _include queryParams={"_include":"MedicationRequest:subject:Group"} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest",
      "size": 20,
    },
  ],
]
`;

exports[`typeSearch _include queryParams={"_include":["MedicationRequest:subject","MedicationRequest:performer"]} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest",
      "size": 20,
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "id": Array [
                    "patient-id-333",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "patient",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "id": Array [
                    "practitioner-id-222",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "practitioner",
    },
  ],
]
`;

exports[`typeSearch _include queryParams={"_include":["MedicationRequest:subject","MedicationRequest:subject"]} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest",
      "size": 20,
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "id": Array [
                    "patient-id-333",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "patient",
    },
  ],
]
`;

exports[`typeSearch _revinclude queryParams={"_revinclude":"*"} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest",
      "size": 20,
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "supportingInformation.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "appointment",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "entity.what.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "auditevent",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "subject.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "basic",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "supportingInfo.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "careplan",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "activity.outcomeReference.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "careplan",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "activity.reference.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "careplan",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "supportingInformation.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "chargeitem",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "prescription.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "claim",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "originalPrescription.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "claim",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "supportingInfo.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "clinicalimpression",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "basedOn.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "communication",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "partOf.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "communication",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "about.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "communication",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "basedOn.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "communicationrequest",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "about.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "communicationrequest",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "subject.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "composition",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "event.detail.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "composition",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "section.focus.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "composition",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "section.entry.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "composition",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "evidence.detail.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "condition",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "provision.data.reference.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "consent",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "subject.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "contract",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "term.offer.topic.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "contract",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "term.asset.typeReference.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "contract",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "term.asset.context.reference.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "contract",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "supportingInfo.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "contract",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "supportingInfo.information.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "coverageeligibilityrequest",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "item.detail.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "coverageeligibilityrequest",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "implicated.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "detectedissue",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "evidence.detail.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "detectedissue",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "basedOn.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "devicerequest",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "priorRequest.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "devicerequest",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "supportingInfo.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "devicerequest",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "basedOn.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "diagnosticreport",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "content.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "documentmanifest",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "related.ref.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "documentmanifest",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "context.related.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "documentreference",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "prescription.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "explanationofbenefit",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "originalPrescription.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "explanationofbenefit",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "recommendation.supportingPatientInformation.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "immunizationrecommendation",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "definition.resource.reference.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "implementationguide",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "manifest.resource.reference.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "implementationguide",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "item.resource.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "linkage",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "entry.item.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "list",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "evaluatedResource.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "measurereport",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "partOf.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "media",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "supportingInformation.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "medicationadministration",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "request.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "medicationadministration",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "supportingInformation.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "medicationdispense",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "authorizingPrescription.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "medicationdispense",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "supportingInformation.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "medicationrequest",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "basedOn.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "medicationrequest",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "priorPrescription.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "medicationrequest",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "basedOn.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "medicationstatement",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "derivedFrom.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "medicationstatement",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "focus.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "messageheader",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "basedOn.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "observation",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "focus.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "observation",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "request.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "paymentnotice",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "response.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "paymentnotice",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "detail.request.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "paymentreconciliation",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "detail.response.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "paymentreconciliation",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "target.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "provenance",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "entity.what.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "provenance",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "subject.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "questionnaireresponse",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "basedOn.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "requestgroup",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "replaces.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "requestgroup",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "action.resource.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "requestgroup",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "basedOn.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "riskassessment",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "parent.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "riskassessment",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "basis.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "riskassessment",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "basedOn.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "servicerequest",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "supportingInfo.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "servicerequest",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "basedOn.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "task",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "focus.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "task",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "for.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "task",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "reasonReference.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "task",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "fixture.resource.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "testscript",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "profile.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "testscript",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "target.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "verificationresult",
    },
  ],
]
`;

exports[`typeSearch _revinclude queryParams={"_revinclude":"MedicationAdministration:request"} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest",
      "size": 20,
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "request.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "medicationadministration",
    },
  ],
]
`;

exports[`typeSearch _revinclude queryParams={"_revinclude":"MedicationAdministration:request:Device"} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest",
      "size": 20,
    },
  ],
]
`;

exports[`typeSearch _revinclude queryParams={"_revinclude":"MedicationAdministration:request:MedicationRequest"} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest",
      "size": 20,
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "request.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "medicationadministration",
    },
  ],
]
`;

exports[`typeSearch _revinclude queryParams={"_revinclude":["MedicationAdministration:request","MedicationAdministration:request"]} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest",
      "size": 20,
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "request.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "medicationadministration",
    },
  ],
]
`;

exports[`typeSearch _revinclude queryParams={"_revinclude":["MedicationAdministration:request","Provenance:target"]} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest",
      "size": 20,
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "request.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "medicationadministration",
    },
  ],
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "terms": Object {
                  "target.reference.keyword": Array [
                    "MedicationRequest/medicationrequest-id-111",
                  ],
                },
              },
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
          },
        },
      },
      "index": "provenance",
    },
  ],
]
`;

exports[`typeSearch Response format 1`] = `
Object {
  "result": Object {
    "entries": Array [
      Object {
        "fullUrl": "https://base-url.com/Patient/ab69afd3-39ed-42c3-9f77-8a718a247742",
        "resource": Object {
          "birthDate": "1995-09-24",
          "gender": "female",
          "id": "ab69afd3-39ed-42c3-9f77-8a718a247742",
          "resourceType": "Patient",
          "vid": "1",
        },
        "search": Object {
          "mode": "match",
        },
      },
    ],
    "message": "",
    "numberOfResults": 1,
  },
}
`;

exports[`typeSearch query snapshots for simple queryParams queryParams={"_count":10,"_getpagesoffset":2,"id":"11111111-1111-1111-1111-111111111111","gender":"female","name":"Emily","_format":"json"} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [
              Object {
                "query_string": Object {
                  "default_operator": "AND",
                  "fields": Array [
                    "id",
                  ],
                  "lenient": true,
                  "query": "11111111-1111-1111-1111-111111111111",
                },
              },
              Object {
                "query_string": Object {
                  "default_operator": "AND",
                  "fields": Array [
                    "gender.*",
                  ],
                  "lenient": true,
                  "query": "female",
                },
              },
              Object {
                "query_string": Object {
                  "default_operator": "AND",
                  "fields": Array [
                    "name.*",
                  ],
                  "lenient": true,
                  "query": "Emily",
                },
              },
            ],
          },
        },
      },
      "from": 2,
      "index": "patient",
      "size": 10,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams queryParams={"_count":10,"_getpagesoffset":2} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [],
          },
        },
      },
      "from": 2,
      "index": "patient",
      "size": 10,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams queryParams={"_format":"json"} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [],
          },
        },
      },
      "from": 0,
      "index": "patient",
      "size": 20,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams queryParams={"gender":"female","name":"Emily"} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [
              Object {
                "query_string": Object {
                  "default_operator": "AND",
                  "fields": Array [
                    "gender.*",
                  ],
                  "lenient": true,
                  "query": "female",
                },
              },
              Object {
                "query_string": Object {
                  "default_operator": "AND",
                  "fields": Array [
                    "name.*",
                  ],
                  "lenient": true,
                  "query": "Emily",
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient",
      "size": 20,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams queryParams={"id":"11111111-1111-1111-1111-111111111111"} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [
              Object {
                "query_string": Object {
                  "default_operator": "AND",
                  "fields": Array [
                    "id",
                  ],
                  "lenient": true,
                  "query": "11111111-1111-1111-1111-111111111111",
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient",
      "size": 20,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams queryParams={} 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match": Object {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": Array [],
          },
        },
      },
      "from": 0,
      "index": "patient",
      "size": 20,
    },
  ],
]
`;
